--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="js/resize.js"></script>
 	<script src="js/grid.js"></script>
 	<script src="js/masonry.pkgd.js"></script>
-	
+	<script src="js/hover.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:300,400" rel="stylesheet">
 </head>
 <body>
@@ -42,7 +42,31 @@
 				+64 9 345 6758 <br>info@dsgn-studio.com
 			</div>
 	  </div>
-	  <div class="grid-item grid-item--width2 three"></div>
+	  <div class="grid-item grid-item--width2 b_projects">
+			<hr class="diagonal">
+			<div class="list">
+				<div class="i_list1">
+					<a href="#"><img src="img/arrow_white.svg" alt=""><span>All</span></a><br>
+					<h1 class="i_list11">All</h1>
+				</div>
+				<div class="i_list2">
+					<a href="#"><img src="img/arrow_white.svg" alt=""><span>House</span></a><br>
+					<h1 class="i_list21">House</h1>
+				</div>	
+				<div class="i_list3">
+					<a href="#"><img src="img/arrow_white.svg" alt=""><span>Commercial</span></a><br><h1 class="i_list31">Commercial</h1>
+				</div>
+				<div class="i_list4">
+					<a href="#"><img src="img/arrow_white.svg" alt=""><span>Personal</span></a><br>
+					<h1 class="i_list41">Personal</h1>
+				</div>	
+				<div class="i_list5">
+					<a href="#"><img src="img/arrow_white.svg" alt=""><span>Studio lab</span></a><br><h1 class="i_list51">Studio Lab</h1>
+				</div>
+				<h1 class="i_list-main">Projects</h1>		
+			</div>
+			  	
+	  </div>
 	  <div class="grid-item grid-item--width3 four"></div>
 	  <div class="grid-item grid-item--width2 s five"></div>
 	  <div class="grid-item grid-item--width2 kube-s six"></div>
