--- a/index.html
+++ b/index.html
@@ -116,8 +116,59 @@
 			</div>
 		</div>
 	  </div>
-	  <div class="grid-item grid-item--width2 kube-s six"></div>
-	  <div class="grid-item grid-item--width1 kube-s seven"></div>
+
+	  <div class="grid-item grid-item--width2 kube-s b_tabano">
+	  	<div class="b_text">
+			<div class="b_text-left">
+				<h1>Tabano</h1>
+				<ul>
+					<li><b>designer:</b> PATRICIA URQUIOLA</li>
+					<li><b>typology:</b> ARMchairs</li>
+					<li><b>Client:</b> B&B ITALIA</li>
+					<li><b>Year:</b> 2014</li>
+				</ul>
+			</div>
+			<div class="i_view"><a href="#">
+				<img src="img/arrow_right.svg" alt="">
+				<span>View Project</span></a>
+			</div>
+			<div class="i_heart">
+				<?xml version="1.0"?>
+				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 492.719 492.719" style="enable-background:new 0 0 492.719 492.719;" xml:space="preserve" width="100%" height="2em" class=""><g><g>
+					<g id="Icons_18_">
+						<path d="M492.719,166.008c0-73.486-59.573-133.056-133.059-133.056c-47.985,0-89.891,25.484-113.302,63.569    c-23.408-38.085-65.332-63.569-113.316-63.569C59.556,32.952,0,92.522,0,166.008c0,40.009,17.729,75.803,45.671,100.178    l188.545,188.553c3.22,3.22,7.587,5.029,12.142,5.029c4.555,0,8.922-1.809,12.142-5.029l188.545-188.553    C474.988,241.811,492.719,206.017,492.719,166.008z" data-original="#000000" class="active-path" data-old_color=" rgb(0, 0, 0)" fill="#000000"/>
+					</g>
+				</g></g> </svg>
+				<span>+200$</span>
+			</div>	
+		</div>
+	  </div>
+
+	  <div class="grid-item grid-item--width1 kube-s b_louis">
+	  	<div class="b_text">
+			<h1>Louis xx</h1>
+			<ul>
+				<li><b>designer:</b> philippe starck</li>
+				<li><b>typology:</b> chairs</li>
+				<li><b>Client:</b> vitra</li>
+				<li><b>Year:</b> 2012</li>
+			</ul>
+			<div class="i_view"><a href="#">
+				<img src="img/arrow_white.svg" alt="">
+				<span>View Project</span></a>
+			</div>
+			<div class="i_heart">
+				<?xml version="1.0"?>
+				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 492.719 492.719" style="enable-background:new 0 0 492.719 492.719;" xml:space="preserve" width="100%" height="2em" class=""><g><g>
+					<g id="Icons_18_">
+						<path d="M492.719,166.008c0-73.486-59.573-133.056-133.059-133.056c-47.985,0-89.891,25.484-113.302,63.569    c-23.408-38.085-65.332-63.569-113.316-63.569C59.556,32.952,0,92.522,0,166.008c0,40.009,17.729,75.803,45.671,100.178    l188.545,188.553c3.22,3.22,7.587,5.029,12.142,5.029c4.555,0,8.922-1.809,12.142-5.029l188.545-188.553    C474.988,241.811,492.719,206.017,492.719,166.008z" data-original="#000000" class="active-path" data-old_color=" rgb(0, 0, 0)" fill="#000000"/>
+					</g>
+				</g></g> </svg>
+				<span>+200$</span>
+			</div>
+	  	</div>
+	  </div>
+
 	  <div class="grid-item grid-item--width4 kube-s eight"></div>
 	  <div class="grid-item grid-item--width2 s nine"></div><br>
 	  <div class="grid-item grid-item--width4 xs ten"></div>
