--- a/index.html
+++ b/index.html
@@ -275,7 +275,31 @@
 		</div>
 	  </div>
 
-	  <div class="grid-item grid-item--width2 xs twelve"></div>
+	  <div class="grid-item grid-item--width2 xs b_timeline">
+	  	<hr class="diagonal">
+		<div class="list">
+			<h4>Timeline</h4>
+			<div class="i_list1">
+				<a href="#"><img src="img/arrow_white.svg" alt=""><span>2017</span></a><br>
+				<h1 class="i_list11">2017</h1>
+			</div>
+			<div class="i_list2">
+				<a href="#"><img src="img/arrow_white.svg" alt=""><span>2016</span></a><br>
+				<h1 class="i_list21">2016</h1>
+			</div>	
+			<div class="i_list3">
+				<a href="#"><img src="img/arrow_white.svg" alt=""><span>2015</span></a><br><h1 class="i_list31">2015</h1>
+			</div>
+			<div class="i_list4">
+				<a href="#"><img src="img/arrow_white.svg" alt=""><span>2014</span></a><br>
+				<h1 class="i_list41">2014</h1>
+			</div>	
+			<div class="i_list5">
+				<a href="#"><img src="img/arrow_white.svg" alt=""><span>2013</span></a><br><h1 class="i_list51">2013</h1>
+			</div>	
+		</div>
+	  </div>
+
 	  <div class="grid-item grid-item--width2 thirteen"></div>
 	  <div class="grid-item grid-item--width5 fourteen"></div>
 	  <div class="grid-item grid-item--width2 small fifteen"></div>
