--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
 	  <div class="grid-item grid-item--width2 xs b_timeline">
 	  	<hr class="diagonal">
-		<div class="list">
+		<div class="b_list">
 			<h4>Timeline</h4>
 			<div class="i_list1">
 				<a href="#"><img src="img/arrow_white.svg" alt=""><span>2017</span></a><br>
@@ -300,10 +300,90 @@
 		</div>
 	  </div>
 
-	  <div class="grid-item grid-item--width2 thirteen"></div>
-	  <div class="grid-item grid-item--width5 fourteen"></div>
-	  <div class="grid-item grid-item--width2 small fifteen"></div>
-	  <div class="grid-item grid-item--width5 small sixteen"></div>
+	  <div class="grid-item grid-item--width2 b_studio">
+		<hr class="diagonal">
+		<h1>Studio</h1>	
+	  </div>
+
+	  <div class="grid-item grid-item--width5 b_studio-info">
+	  	<div class="b_studio-text clearfix">
+			<div class="b_text-left">
+				<p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin eros sit amet nulla rhoncus dictum. </b></p>
+				<p><b>Nam rhoncus fringilla dolor vitae vulputate. Nullam quis eros lorem. Integer cursus erat a orci congue feugiat. Cras rhoncus mollis libero, id aliquet purus varius sed.</b></p>
+				<p>Aenean ullamcorper porta nisl, ac lobortis elit commodo placerat.</p>
+				<p>Vivamus eget laoreet enim. Sed nunc dui, egestas vel diam convallis, faucibus iaculis sapien. Sed ut vulputate nisi. </p>
+				<p>Proin tempor risus tellus. Maecenas sit amet fringilla urna, vel iaculis velit. Sed ac felis et sem mollis dictum sed id orci.</p>
+			</div>
+			<div class="b_text-right clearfix right">
+				<img src="img/studio.png" alt="">
+				<h4>Awards</h4>
+				<ul>
+					<li>Aenean ullamcorper porta </li>
+					<li>nisl,</li>
+					<li>ac lobortis elit</li>
+					<li>commodo placerat.</li>
+					<li>vivamus</li>
+				</ul>
+				<ul class="right">
+					<li>Aenean ullamcorper porta </li>
+					<li>nisl,</li>
+					<li>ac lobortis elit</li>
+					<li>commodo placerat.</li>
+					<li>vivamus</li>
+				</ul>
+			</div>
+		</div>	
+	  </div>
+
+	  <div class="grid-item grid-item--width10 b_staff-wrapper">
+	  	<div class=" b_staff">
+			<div class="staff-text">
+				<h4>Staff.</h4>
+				<p>Sit amet laoreet sapien dictum. Sed eget eros augue. Pellentesque tempor mi sit amet nisi tincidunt tincidunt. Fusce malesuada lectus sed mauris pharetra faucibus. </p>
+				<p>Aenean diam tortor, hendrerit ac pulvinar vel, condimentum ac velit. Phasellus eu odio elit. Aenean volutpat mi quam, ut ornare augue tempus ut. </p>
+				<p>Morbi sagittis diam mauris, in adipiscing nulla convallis ut.</p>
+			</div>
+			<div class="staff-photo clearfix">
+				<img src="img/photo1.png" alt="">
+				<h4>philippe starck</h4>
+				<p>designer</p>
+				<div class="cv"><a href="#">cv</a><img src="img/arrow_left.svg" alt=""></div>
+				<div class="links right">
+					<a href="#"><img src="img/s_facebook.svg" alt=""></a>
+					<a href="#"><img src="img/s_twitter.svg" alt=""></a>
+					<a href="#"><img src="img/s_linkedin.svg" alt=""></a>
+					<a href="#"><img src="img/s_google.svg" alt=""></a>
+				</div>
+			</div>
+			<div class="staff-photo clearfix">
+				<img src="img/photo2.png" alt="">
+				<h4>mario bellini</h4>
+				<p>designer</p>
+				<div class="cv"><a href="#">cv</a><img src="img/arrow_left.svg" alt=""></div>
+				<div class="links right">
+					<a href="#"><img src="img/s_facebook.svg" alt=""></a>
+					<a href="#"><img src="img/s_twitter.svg" alt=""></a>
+					<a href="#"><img src="img/s_linkedin.svg" alt=""></a>
+					<a href="#"><img src="img/s_google.svg" alt=""></a>
+				</div>
+			</div>
+			<div class="staff-photo clearfix">
+				<img src="img/photo3.png" alt="">
+				<h4>patricia urquiola</h4>
+				<p>designer</p>
+				<div class="cv"><a href="#">cv</a><img src="img/arrow_left.svg" alt=""></div>
+				<div class="links right">
+					<a href="#"><img src="img/s_facebook.svg" alt=""></a>
+					<a href="#"><img src="img/s_twitter.svg" alt=""></a>
+					<a href="#"><img src="img/s_linkedin.svg" alt=""></a>
+					<a href="#"><img src="img/s_google.svg" alt=""></a>
+				</div>
+			</div>
+		  </div>
+	  </div>
+
+	  <div class="grid-item grid-item--width2 fifteen"></div>
+	  <div class="grid-item grid-item--width5 sixteen"></div>
 	</div>
 </body>
 </html>
